refactor: Collections.toList -> toList로 변경 (#217)